{
  "version": 4,
  "terraform_version": "1.14.2",
  "serial": 456,
  "lineage": "396241a4-498b-3f8b-142e-385f126f0d4b",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:404931289118:loadbalancer/app/shopnow-ecs-alb/cc236435a5dccb09",
            "arn_suffix": "app/shopnow-ecs-alb/cc236435a5dccb09",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "shopnow-ecs-alb-794845146.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:404931289118:loadbalancer/app/shopnow-ecs-alb/cc236435a5dccb09",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "shopnow-ecs-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0138a33adaa5efa30"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-000c24e57f412a21f"
              },
              {
                "subnet_id": "subnet-0e1eb9c88bff695f2"
              }
            ],
            "subnets": [
              "subnet-000c24e57f412a21f",
              "subnet-0e1eb9c88bff695f2"
            ],
            "tags": {
              "Name": "shopnow-ecs-alb"
            },
            "tags_all": {
              "Name": "shopnow-ecs-alb"
            },
            "vpc_id": "vpc-0582f57e566c71239",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:404931289118:listener/app/shopnow-ecs-alb/cc236435a5dccb09/646a2053f9695201",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:404931289118:targetgroup/shopnow-ecs-frontend-tg/9b2a08a36ef8635a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:404931289118:listener/app/shopnow-ecs-alb/cc236435a5dccb09/646a2053f9695201",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:404931289118:loadbalancer/app/shopnow-ecs-alb/cc236435a5dccb09",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.frontend",
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:404931289118:targetgroup/shopnow-ecs-backend-tg/2d450ef119d7a4a0",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:404931289118:listener-rule/app/shopnow-ecs-alb/cc236435a5dccb09/646a2053f9695201/4275d3b1ea6539a2",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api",
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:404931289118:listener-rule/app/shopnow-ecs-alb/cc236435a5dccb09/646a2053f9695201/4275d3b1ea6539a2",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:404931289118:listener/app/shopnow-ecs-alb/cc236435a5dccb09/646a2053f9695201",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_target_group.backend",
            "module.alb.aws_lb_target_group.frontend",
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:404931289118:targetgroup/shopnow-ecs-backend-tg/2d450ef119d7a4a0",
            "arn_suffix": "targetgroup/shopnow-ecs-backend-tg/2d450ef119d7a4a0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:404931289118:targetgroup/shopnow-ecs-backend-tg/2d450ef119d7a4a0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "shopnow-ecs-backend-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "shopnow-ecs-backend-tg"
            },
            "tags_all": {
              "Name": "shopnow-ecs-backend-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0582f57e566c71239"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:404931289118:targetgroup/shopnow-ecs-frontend-tg/9b2a08a36ef8635a",
            "arn_suffix": "targetgroup/shopnow-ecs-frontend-tg/9b2a08a36ef8635a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:404931289118:targetgroup/shopnow-ecs-frontend-tg/9b2a08a36ef8635a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "shopnow-ecs-frontend-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "shopnow-ecs-frontend-tg"
            },
            "tags_all": {
              "Name": "shopnow-ecs-frontend-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0582f57e566c71239"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404931289118:security-group/sg-0138a33adaa5efa30",
            "description": "Allow HTTP traffic to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0138a33adaa5efa30",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "shopnow-ecs-alb-sg",
            "name_prefix": "",
            "owner_id": "404931289118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shopnow-ecs-alb-sg"
            },
            "tags_all": {
              "Name": "shopnow-ecs-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0582f57e566c71239"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404931289118:vpc/vpc-0582f57e566c71239",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0a1cdaa87744cacc5",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0edd0aeb9540daa45",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0582f57e566c71239",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f7eced911026080c",
            "owner_id": "404931289118",
            "tags": {
              "Name": "shopnow-ecs-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404931289118:security-group/sg-01f1e00cc9a0c0240",
            "description": "Allow traffic from ALB and between tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01f1e00cc9a0c0240",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0138a33adaa5efa30"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "shopnow-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "404931289118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shopnow-ecs-tasks-sg"
            },
            "tags_all": {
              "Name": "shopnow-ecs-tasks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0582f57e566c71239"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404931289118:security-group/sg-0a3df552d1400e82d",
            "description": "Security group for EKS nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a3df552d1400e82d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "shopnow-ecs-node-sg",
            "name_prefix": "",
            "owner_id": "404931289118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shopnow-ecs-node-sg"
            },
            "tags_all": {
              "Name": "shopnow-ecs-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0582f57e566c71239"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.elasticache",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404931289118:security-group/sg-0a279f2119c2d2488",
            "description": "Allow Redis from EKS nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a279f2119c2d2488",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "shopnow-ecs-redis-sg",
            "name_prefix": "",
            "owner_id": "404931289118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shopnow-ecs-redis-sg"
            },
            "tags_all": {
              "Name": "shopnow-ecs-redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0582f57e566c71239"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404931289118:security-group/sg-03f550e100247b39f",
            "description": "Allow PostgreSQL from EKS nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f550e100247b39f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "shopnow-ecs-rds-sg",
            "name_prefix": "",
            "owner_id": "404931289118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shopnow-ecs-rds-sg"
            },
            "tags_all": {
              "Name": "shopnow-ecs-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0582f57e566c71239"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bb0cfa61aefb4505",
            "arn": "arn:aws:ec2:us-east-1:404931289118:elastic-ip/eipalloc-0bb0cfa61aefb4505",
            "domain": "vpc",
            "id": "eipalloc-0bb0cfa61aefb4505",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-48-172-121.compute-1.amazonaws.com",
            "public_ip": "100.48.172.121",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404931289118:internet-gateway/igw-070de4c35ecc710b4",
            "id": "igw-070de4c35ecc710b4",
            "owner_id": "404931289118",
            "tags": {
              "Name": "shopnow-ecs-igw"
            },
            "tags_all": {
              "Name": "shopnow-ecs-igw"
            },
            "vpc_id": "vpc-0582f57e566c71239"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bb0cfa61aefb4505",
            "association_id": "eipassoc-03e679a2c41477e65",
            "connectivity_type": "public",
            "id": "nat-058fdcd2eaff07834",
            "network_interface_id": "eni-0105e48095c2cefc9",
            "private_ip": "10.0.0.98",
            "public_ip": "100.48.172.121",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-000c24e57f412a21f",
            "tags": {
              "Name": "shopnow-ecs-nat"
            },
            "tags_all": {
              "Name": "shopnow-ecs-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404931289118:route-table/rtb-02b3f9ef9c7ec048f",
            "id": "rtb-02b3f9ef9c7ec048f",
            "owner_id": "404931289118",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-058fdcd2eaff07834",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "shopnow-ecs-private-rt"
            },
            "tags_all": {
              "Name": "shopnow-ecs-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0582f57e566c71239"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404931289118:route-table/rtb-0043fdd289d5c2560",
            "id": "rtb-0043fdd289d5c2560",
            "owner_id": "404931289118",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-070de4c35ecc710b4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "shopnow-ecs-public-rt"
            },
            "tags_all": {
              "Name": "shopnow-ecs-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0582f57e566c71239"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3830048666aa115",
            "route_table_id": "rtb-02b3f9ef9c7ec048f",
            "subnet_id": "subnet-0ed2103bff4e301db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e04035c8aae7c0e",
            "route_table_id": "rtb-02b3f9ef9c7ec048f",
            "subnet_id": "subnet-0556fc9f377449b2a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04588cb30545c0b69",
            "route_table_id": "rtb-0043fdd289d5c2560",
            "subnet_id": "subnet-000c24e57f412a21f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8817f6168ba4650",
            "route_table_id": "rtb-0043fdd289d5c2560",
            "subnet_id": "subnet-0e1eb9c88bff695f2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404931289118:subnet/subnet-0ed2103bff4e301db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed2103bff4e301db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "404931289118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shopnow-ecs-private-0",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "shopnow-ecs-private-0",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0582f57e566c71239"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404931289118:subnet/subnet-0556fc9f377449b2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0556fc9f377449b2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "404931289118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shopnow-ecs-private-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "shopnow-ecs-private-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0582f57e566c71239"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404931289118:subnet/subnet-000c24e57f412a21f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000c24e57f412a21f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "404931289118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shopnow-ecs-public-0",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "shopnow-ecs-public-0",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0582f57e566c71239"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404931289118:subnet/subnet-0e1eb9c88bff695f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1eb9c88bff695f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "404931289118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shopnow-ecs-public-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "shopnow-ecs-public-1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0582f57e566c71239"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:404931289118:vpc/vpc-0582f57e566c71239",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-025c964e4bea3290f",
            "default_route_table_id": "rtb-0f7eced911026080c",
            "default_security_group_id": "sg-0579c6f29bdf8e0a1",
            "dhcp_options_id": "dopt-0edd0aeb9540daa45",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0582f57e566c71239",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f7eced911026080c",
            "owner_id": "404931289118",
            "tags": {
              "Name": "shopnow-ecs-vpc"
            },
            "tags_all": {
              "Name": "shopnow-ecs-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}